--- a/sway/config
+++ b/sway/config
@@ -60,7 +60,8 @@ input type:keyboard {
     # Map caps lock to escape and use right alt as compose key to create umlauts
     # To actually create them, type the following keys in a sequence:
     # ralt + " + u --> ü
-    xkb_options caps:escape,compose:ralt
+    xkb_layout us,in
+    xkb_options caps:swapescape,compose:ralt,grp:shift_caps_toggle
 }
 
 ### Key bindings
