--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,8 +1,8 @@
 title=Terminal
-font=monospace:size=12
+font=sourcecodepro-nerd:size=12
 [colors]
 alpha=0.5
-# background=002b36
+background=101010
 # foreground=839496
 
 ## Normal/regular colors (color palette 0-7)
